[gd_scene load_steps=7 format=3 uid="uid://gld2ufh5qvny"]

[ext_resource type="Script" uid="uid://jviu3x2yrwiy" path="res://Game/Enemy/Imp.gd" id="1_xkvg1"]
[ext_resource type="Material" uid="uid://cjrjv08u6feuo" path="res://Game/Enemy/enemy_flash_material.tres" id="2_eqk6x"]
[ext_resource type="Texture2D" uid="uid://bra0gwhmjpuwh" path="res://assets/enemies/imp.png" id="2_qqkt2"]
[ext_resource type="Script" uid="uid://k8hfbh8gaa7v" path="res://Game/Enemy/hit_flasher.gd" id="4_eqk6x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y5q7k"]
size = Vector2(7, 18)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_83l4y"]
polygon = PackedVector2Array(0, 0, 7, 0, 7, 18, 0, 18)

[node name="Imp" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 11
wall_min_slide_angle = 1.5707964
script = ExtResource("1_xkvg1")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = ExtResource("2_eqk6x")
position = Vector2(4, 9)
texture = ExtResource("2_qqkt2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3.5, 9)
shape = SubResource("RectangleShape2D_y5q7k")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_83l4y")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 7.0
offset_bottom = 18.0
color = Color(0.83015114, 0.39168894, 0, 1)

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)
collision_mask = 3
collide_with_areas = true

[node name="SteeringRays" type="Node2D" parent="."]

[node name="Left" type="RayCast2D" parent="SteeringRays"]
position = Vector2(0, 9)
target_position = Vector2(-4, 0)
collision_mask = 0

[node name="Right" type="RayCast2D" parent="SteeringRays"]
position = Vector2(7, 9)
target_position = Vector2(4, 0)
collision_mask = 0

[node name="BigFallDetector" type="RayCast2D" parent="."]
position = Vector2(15, 0)
target_position = Vector2(0, 500)
collide_with_areas = true

[node name="HitFlasher" type="Timer" parent="." node_paths=PackedStringArray("to_flash")]
script = ExtResource("4_eqk6x")
to_flash = NodePath("../Sprite2D")
